src/app/app.component.scss
#digimonList {
    display: flex;
    flex-flow: row wrap;
    #digimonCard {
        width: 150px;
        height: 150px;
        margin: 24px;

        #digimonCardTitle {
            font-size: 16px;
        }
        
        #digimonDiv {
            display: flex;
            justify-content: center;
            align-items: center;

            #digimonImage {
                width: 100px;
                height: 100px;
            }
        }
    }
}

.digimonDetails {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 999;
    background-color: rgba(128, 128, 128, 0.295);

    .digimonDetailsCard {
        width: 500px;
        height: 500px;
    }

    .digimonDetailsImageDiv {
        display: flex;
        justify-content: right;
        align-items: center;

        .digimonDetailsImage {
            width: 100px;
            height: 100px;
        }
    }
}

